# ChangeLog for kde-base/perlkde
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/perlkde/ChangeLog,v 1.17 2012/01/25 18:17:21 johu Exp $

*perlkde-4.8.0 (25 Jan 2012)

  25 Jan 2012; Johannes Huber <johu@gentoo.org> +perlkde-4.8.0.ebuild:
  Version bump KDE SC 4.8.0

  17 Jan 2012; Johannes Huber <johu@gentoo.org> -perlkde-4.7.3.ebuild:
  Remove KDE SC 4.7.3

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> perlkde-4.7.4.ebuild:
  Stable for amd64, wrt bug #396359

  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> perlkde-4.7.4.ebuild:
  x86 stable wrt bug #396359

*perlkde-4.7.4 (11 Dec 2011)

  11 Dec 2011; Alexey Shvetsov <alexxy@gentoo.org> +perlkde-4.7.4.ebuild:
  Version bump KDE SC 4.7.4

  07 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -perlkde-4.7.2-r1.ebuild:
  Drop KDE 4.7.2

  07 Dec 2011; Markos Chandras <hwoarang@gentoo.org> perlkde-4.7.3.ebuild:
  Stable on amd64 wrt bug #388279

  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> perlkde-4.7.3.ebuild:
  x86 stable wrt bug #388279

*perlkde-4.7.3 (02 Nov 2011)

  02 Nov 2011; Alexey Shvetsov <alexxy@gentoo.org> +perlkde-4.7.3.ebuild:
  Version bump KDE SC 4.7.3

  28 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> -perlkde-4.7.1.ebuild,
  -perlkde-4.7.1-r1.ebuild:
  Drop KDEpim 4.6.1 and KDE 4.7.1

  28 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> -perlkde-4.7.1.ebuild,
  -perlkde-4.7.1-r1.ebuild:
  Drop KDEpim 4.6.1 and KDE 4.7.1

  28 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> -perlkde-4.7.2.ebuild:
  Remove old

*perlkde-4.7.2-r1 (19 Oct 2011)
*perlkde-4.7.1-r1 (19 Oct 2011)

  19 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +perlkde-4.7.1-r1.ebuild, +perlkde-4.7.2-r1.ebuild,
  +files/perlkde-4.7.2-vendor.patch:
  Install in vendor dir, not site dir; bug 387477

  15 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org> -perlkde-4.7.0.ebuild:
  Drop KDE 4.7.0

*perlkde-4.7.2 (06 Oct 2011)