@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/perlkde
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/perlkde/ChangeLog,v 1.17 2012/01/25 18:17:21 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/perlkde/ChangeLog,v 1.18 2012/02/14 19:22:55 nixnut Exp $
+
+  14 Feb 2012; nixnut <nixnut@gentoo.org> perlkde-4.7.4.ebuild:
+  ~ppc, preparing for #396359
 
 *perlkde-4.8.0 (25 Jan 2012)
 
